; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslogCurrentTime.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_osinst.c_vfslogCurrentTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (%struct.TYPE_3__*, double*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, double*)* @vfslogCurrentTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfslogCurrentTime(i32* %0, double* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double*, align 8
  store i32* %0, i32** %3, align 8
  store double* %1, double** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.TYPE_3__* @REALVFS(i32* %5)
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32 (%struct.TYPE_3__*, double*)*, i32 (%struct.TYPE_3__*, double*)** %7, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call %struct.TYPE_3__* @REALVFS(i32* %9)
  %11 = load double*, double** %4, align 8
  %12 = call i32 %8(%struct.TYPE_3__* %10, double* %11)
  ret i32 %12
}

declare dso_local %struct.TYPE_3__* @REALVFS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
